--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-spring.application.name=resourseManagment
-server.port=8083
+spring.application.name=queriesManagment
+server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.output.ansi.enabled=always
+
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+logging.level.org.hibernate.orm.jdbc.bind=trace
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+frontend.url=${FRONTEND_URL:http://localhost:5173}
