--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-spring.application.name=queriesManagment
-server.port=8082
+spring.application.name=resourseManagment
+server.port=8083
+
+#spring.datasource.url=jdbc:postgresql://db.hukxeuwcmrdbjversyfm.supabase.co:5432/postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.output.ansi.enabled=always
-
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-logging.level.org.hibernate.orm.jdbc.bind=trace
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.output.ansi.enabled=always
+logging.level.org.hibernate.orm.jdbc.bind=trace
 
 frontend.url=${FRONTEND_URL:http://localhost:5173}
+
