--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,19 @@
 spring.application.name=resourseManagment
 server.port=8083
 
-#spring.datasource.url=jdbc:postgresql://db.hukxeuwcmrdbjversyfm.supabase.co:5432/postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://aws-0-sa-east-1.pooler.supabase.com:6543/postgres?sslmode=require
+spring.datasource.username=postgres.pgpzhxqubhcbbjgykwez
+spring.datasource.password=qUANTUMdEV2025
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.output.ansi.enabled=always
-logging.level.org.hibernate.orm.jdbc.bind=trace
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
 
 frontend.url=${FRONTEND_URL:http://localhost:5173}
 
